# rstlrx

./: .gitignore  Cargo.toml  MIGRATION_MAP.md  MIGRATION_REPORT.md  README.md  REUSE.toml  package.json  rstlrx.tape  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION_MAP.md  MIGRATION_REPORT.md  PORT_SPEC.md
src/: channel.test.ts  channel.ts  config.rs  config.test.ts  config.ts  dirs.ts  main.rs  main.test.ts  main.ts  romanize.rs  romanize.test.ts  romanize.ts  sync.integration.test.ts  sync.rs  sync.test.ts  sync.ts
src/lyrics/: index.test.ts  index.ts  mod.rs
src/lyrics/lrclib/: index.test.ts  index.ts  mod.rs
src/player/: index.ts  mod.rs
src/player/spotify/: auth.rs  auth.ts  index.test.ts  index.ts  mod.rs
src/renderer/: index.ts  mod.rs
src/renderer/tui/: index.test.ts  index.ts  mod.rs  style.rs  style.test.ts  style.ts
