[package]
name = "rstlrx"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
open = "5"
async-trait = "0.1"
anyhow = "1"
dirs = "6"
futures = "0.3"
any_ascii = "0.3.3"
pinyin = { version = "0.11.0", features = ["plain"] }
kakasi = "0.1.0"

[profile.release]                                                                
lto = true       
strip = true
